# Physecs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: Assets.cpp  Assets.h  Camera.h  CameraMovementSystem.cpp  CameraMovementSystem.h  Components.h  Demo.cpp  Demo.h  Input.cpp  Input.h  Light.h  Main.cpp
demo/Renderer/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
include/: BoundsUtil.h  MassUtil.h  Physecs.h
include/Joints/: FixedJoint.h  PrismaticJoint.h  RevoluteJoint.h
include/Physecs/: BVH.h  Bounds.h  BoundsUtil.h  CharacterController.h  Colliders.h  Components.h  Constraint1D.h  Constraint1DContainer.h  Constraint1DW.h  ConvexMesh.h  Joint.h  Physecs.h  PhysecsAPI.h  SIMD.h  ThreadPool.h  TriangleMesh.h
include/Physecs/Joints/: FixedJoint.h  GearJoint.h  PrismaticJoint.h  RevoluteJoint.h  ServoJoint.h  SphericalJoint.h  UniversalJoint.h
res/meshes/: box.glb  capsule.glb
res/shaders/: g_buffer_fs.glsl  g_buffer_vs.glsl  hdr_fs.glsl  scene_fs.glsl  scene_vs.glsl  screen_quad_vs.glsl  shadow_map_fs.glsl  shadow_map_vs.glsl  ssao_blur_fs.glsl  ssao_fs.glsl
src/: BVH.cpp  Bounds.cpp  BoundsUtil.cpp  CharacterController.cpp  Clipping.cpp  Clipping.h  Collision.cpp  Collision.h  CollisionTriangleMesh.cpp  CollisionTriangleMesh.h  Constraint1D.cpp  Constraint1D.h  Constraint1DContainer.cpp  Constraint1DW.cpp  ContactConstraints.cpp  ContactConstraints.h  ContactManifold.h  ContactManifoldClustering.cpp  ContactManifoldClustering.h  ContactsUtil.cpp  ContactsUtil.h  ConvexMesh.cpp  EPA.h  GJK.h  GeomUtil.cpp  GeomUtil.h  Joint.cpp  JointsUtil.h  MassUtil.cpp  MathUtil.h  Overlap.cpp  Overlap.h  Physecs.cpp  Profiling.h  Raycast.cpp  Raycast.h  SIMD.h  SolverData.h  ThreadPool.cpp  Transform.h  (+1 more)
src/Joints/: FixedJoint.cpp  GearJoint.cpp  PrismaticJoint.cpp  RevoluteJoint.cpp  ServoJoint.cpp  SphericalJoint.cpp  UniversalJoint.cpp
